--- a/style.css
+++ b/style.css
@@ -1,243 +1,253 @@
-@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Moon+Dance&family=Poppins:wght@400;700&display=swap');
-*{
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-	font-family: 'Poppins', sans-serif;
-	font-weight: 500;
+@import url("https://fonts.googleapis.com/css2?family=Lobster&family=Moon+Dance&family=Poppins:wght@400;700&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
 }
-body{
-	background: linear-gradient(
-106deg, rgb(0 4 9) 0%, rgb(35 3 120) 100%);
-    color: white;
+body {
+  background: linear-gradient(106deg, rgb(0 4 9) 0%, rgb(35 3 120) 100%);
+  color: white;
 }
-html{
-	scroll-behavior: smooth;
+html {
+  scroll-behavior: smooth;
 }
-p{
-	font-size: 18px;
-	font-weight: 400 !important;
+p {
+  font-size: 18px;
+  font-weight: 400 !important;
 }
-h1,h2,h3,h4{
-	font-weight: 700;
+h1,
+h2,
+h3,
+h4 {
+  font-weight: 700;
 }
-a{
-	text-decoration: none;
+a {
+  text-decoration: none;
 }
-img{
-	max-width: 99%;
+img {
+  max-width: 99%;
 }
 
-header nav{
-	display: flex;
-	justify-content: space-around;
-	background-color: #112233;
-	align-items: center;
-	margin: 0 auto;
+header nav {
+  display: flex;
+  justify-content: space-around;
+  background-color: #112233;
+  align-items: center;
+  margin: 0 auto;
 }
 nav .logo {
-	width:50%;
-	padding-left: 10%;
+  width: 50%;
+  padding-left: 10%;
 }
-.logo a{
-	display: block;
-		font-size: 22px;
-		color:white;
+.logo a {
+  display: block;
+  font-size: 22px;
+  color: white;
 }
 .nav-links {
-	display: flex;
-	justify-content: space-around;
-	width: 50%;
+  display: flex;
+  justify-content: space-around;
+  width: 50%;
 }
-nav .nav-links a{
-	display:inline-block;
-	padding: 10px 0px;
-	font-size: 20px;
-	color:aqua;
+nav .nav-links a {
+  display: inline-block;
+  padding: 10px 0px;
+  font-size: 20px;
+  color: aqua;
 }
-.header-main{
-	display: flex;
-	width: 95%;
-	justify-content: space-between;
-	align-items: center;
-	margin: 100px auto;
+.header-main {
+  display: flex;
+  width: 95%;
+  justify-content: space-between;
+  align-items: center;
+  margin: 100px auto;
 }
-.left-side{
-	width:50%;
-	padding: 40px;
+.left-side {
+  width: 50%;
+  padding: 40px;
 }
-.left-side h1{
-	font-family: 'Lobster', cursive;
-	font-size: 48px
+.left-side h1 {
+  font-family: "Lobster", cursive;
+  font-size: 48px;
 }
-.left-side h1> span {
-		font-family: 'Poppins', sans-serif;
-		font-weight: 700;
+.left-side h1 > span {
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
 }
 .left-side > * {
-	padding:5px 0px;
+  padding: 5px 0px;
 }
-.right-side{
-	width:50%;
+.right-side {
+  width: 50%;
 }
-.right-side img{
-	box-shadow: 1px 1px 2px #0f0404, inset 1px 1px 2px #ff9803;
-    border-radius: 50%
+.right-side img {
+  box-shadow: 1px 1px 2px #0f0404, inset 1px 1px 2px #ff9803;
+  border-radius: 50%;
 }
-.title{
-	padding-left: 10px;
-	font-size: 36px;
-	border-left: 4px solid #002eff;
-
-
+.title {
+  padding-left: 10px;
+  font-size: 36px;
+  border-left: 4px solid #002eff;
 }
 
-.red-btn{
-	  border-radius: 11px;
-    display: inline-block;
-    padding: 12px 20px;
-    background: #2e2dff;
-    color: white;
-    margin: 15px 0px
-;
+.red-btn {
+  border-radius: 11px;
+  display: inline-block;
+  padding: 12px 20px;
+  background: #2e2dff;
+  color: white;
+  margin: 15px 0px;
 }
 
 /* Section two here */
-.mission{
-	width: 95%;
-	margin: 0 auto;
+.mission {
+  width: 95%;
+  margin: 0 auto;
 }
-.mission-title{
-	text-align: center;
-	padding: 50px 0px;
-	font-size: 46px;
+.mission-title {
+  text-align: center;
+  padding: 50px 0px;
+  font-size: 46px;
 }
-span{
-	color: #002eff !important;
-	font-weight: 700;
-
+span {
+  color: #002eff !important;
+  font-weight: 700;
 }
-.mission-elements{
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
+.mission-elements {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
-.mission-elements > div{
-	width: 32%;
+.mission-elements > div {
+  width: 32%;
 }
-.mission-content-1{
-	background:rgba(9, 156, 241, 0.699);
-	border-radius:10px;
-	padding: 20px 15px;
-	box-shadow: 2px 2px 5px rgba(9, 156, 241, 0.699);
-	margin-top: 40px;
+.mission-content-1 {
+  background: rgba(9, 156, 241, 0.699);
+  border-radius: 10px;
+  padding: 20px 15px;
+  box-shadow: 2px 2px 5px rgba(9, 156, 241, 0.699);
+  margin-top: 40px;
 }
-.mission-content-1 img{
-	width:55%;
+.mission-content-1 img {
+  width: 55%;
 }
-.mission-content-1 > h2,p{
-	margin-top: 10px;
+.mission-content-1 > h2,
+p {
+  margin-top: 10px;
 }
-.mission-1{
-	   background: linear-gradient(106deg, rgba(5,84,166,1) 0%, rgba(9,164,150,1) 100%);
+.mission-1 {
+  background: linear-gradient(
+    106deg,
+    rgba(5, 84, 166, 1) 0%,
+    rgba(9, 164, 150, 1) 100%
+  );
 }
-.vission{
-	background: linear-gradient(321deg, rgba(20,115,215,1) 0%, rgba(20,226,207,1) 100%);
+.vission {
+  background: linear-gradient(
+    321deg,
+    rgba(20, 115, 215, 1) 0%,
+    rgba(20, 226, 207, 1) 100%
+  );
 }
 
 /* inner section */
-.inner-section-1{
-	display: flex;
-	justify-content: space-evenly;
-	width:95%;
-	align-items: center;
-	margin: 100px auto;
-
+.inner-section-1 {
+  display: flex;
+  justify-content: space-evenly;
+  width: 95%;
+  align-items: center;
+  margin: 100px auto;
 }
-.inner-section-1 .content h1{
-	font-size: 32px;
+.inner-section-1 .content h1 {
+  font-size: 32px;
 }
-.inner-section-1 img{
-	height:370px;
+.inner-section-1 img {
+  height: 370px;
 }
-.inner-section-1 .content p{
-	font-size: 18px;
-	margin:15px 0px;
+.inner-section-1 .content p {
+  font-size: 18px;
+  margin: 15px 0px;
 }
 .inner-section-1 .content .red-btn {
-	font-size: 18px;
+  font-size: 18px;
 }
 .inner-section-1 > div {
-	width: 45%;
+  width: 45%;
 }
-
 
 /* footer area */
-footer{
-	background-color: #112233;
-	padding: 50px;
-	text-align: center;
-	color: white;
+footer {
+  background-color: #112233;
+  padding: 50px;
+  text-align: center;
+  color: white;
 }
-footer h2{
-	font-family: 'Moon Dance', cursive;
-	font-size: 70px;
+footer h2 {
+  font-family: "Moon Dance", cursive;
+  font-size: 70px;
 }
-footer p{
-	color: gray;
-}
-
-.app{
-	width: 95%;
-	margin: 100px auto;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-}
-.app .app-img{
-	width: 45%;
-	text-align: center;
-	height: 443px;
-}
-.app-img img{
-	height:535px;
-	padding: 20px 0px;
-	margin-bottom: 20px;
-}
-.app .app-content{
-	width: 45%;
-	padding-top: 40px;
-}
-.app-title{
-	text-align: center;
-	margin:70px 0px;
-	font-weight: 700;
+footer p {
+  color: gray;
 }
 
-.app-btn{
-	padding: 10px 15px;
-	background:linear-gradient(132deg,rgb(2, 198, 212),rgb(0, 0, 236));
-	color:white;
-	border-radius: 10px;
-	display: inline-block;
-	margin-top: 15px;
+.app {
+  width: 95%;
+  margin: 100px auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.app .app-img {
+  width: 45%;
+  text-align: center;
+  height: 443px;
+}
+.app-img img {
+  height: 535px;
+  padding: 20px 0px;
+  margin-bottom: 20px;
+}
+.app .app-content {
+  width: 45%;
+  padding-top: 40px;
+}
+.app-title {
+  text-align: center;
+  margin: 70px 0px;
+  font-weight: 700;
 }
 
-@media screen and (max-width:600px){
-	
-	.mission,.header-main,.app , .inner-section-1, .mission-elements {
-		flex-direction: column;
-		text-align: center;
-		justify-content: center;
-		margin-bottom: 20px;
-	}
-	.header-main {
-		flex-direction: column-reverse;
-	}
-	.header-main > div,
-	.mission > div ,
-	.inner-section-1 > div, .mission-elements > div, .app > div{
-		width: 90%;
-		margin: 0 auto;
-	}
+.app-btn {
+  padding: 10px 15px;
+  background: linear-gradient(132deg, rgb(2, 198, 212), rgb(0, 0, 236));
+  color: white;
+  border-radius: 10px;
+  display: inline-block;
+  margin-top: 15px;
+}
+
+@media screen and (max-width: 600px) {
+  .mission,
+  .header-main,
+  .app,
+  .inner-section-1,
+  .mission-elements {
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    margin-bottom: 20px;
+  }
+  .header-main {
+    flex-direction: column-reverse;
+  }
+  .header-main > div,
+  .mission > div,
+  .inner-section-1 > div,
+  .mission-elements > div,
+  .app > div {
+    width: 90%;
+    margin: 0 auto;
+  }
 }
